# document-parsing-etl-pipeline

./: .gitignore  README.md  docker-compose.minio.yaml  docker-compose.yaml  pyproject.toml
dags/: example_hello_world.py  file_sensor.py  first_dag.py
notebooks/: airflow.ipynb  docling.ipynb  notebook1.ipynb
services/parser/: Dockerfile  Dockerfile.api  Dockerfile.parser  Dockerfile.ui  api.py  demo.py  main.py  requirements.txt  temp.py
services/parser/src/database/: base.py  db.py  repository.py  schema.py
services/parser/src/engine/: pdf_parser.py
services/parser/src/storage/: minio.py
